syntax = "proto3";

package tournament_management;

option go_package = "github.com/iRankHub/backend/internal/grpc/proto/tournament_management";

service InvitationService {
  rpc AcceptInvitation(AcceptInvitationRequest) returns (AcceptInvitationResponse);
  rpc DeclineInvitation(DeclineInvitationRequest) returns (DeclineInvitationResponse);
  rpc RegisterTeam(RegisterTeamRequest) returns (RegisterTeamResponse);
  rpc AddTeamMember(AddTeamMemberRequest) returns (AddTeamMemberResponse);
  rpc GetInvitationStatus(GetInvitationStatusRequest) returns (GetInvitationStatusResponse);
}

message AcceptInvitationRequest {
  int32 invitation_id = 1;
  string token = 2;
}

message AcceptInvitationResponse {
  bool success = 1;
  string message = 2;
}

message DeclineInvitationRequest {
  int32 invitation_id = 1;
  string token = 2;
}

message DeclineInvitationResponse {
  bool success = 1;
  string message = 2;
}

message RegisterTeamRequest {
  int32 invitation_id = 1;
  string team_name = 2;
  string token = 3;
}

message RegisterTeamResponse {
  bool success = 1;
  string message = 2;
  int32 team_id = 3;
}

message AddTeamMemberRequest {
  int32 team_id = 1;
  int32 student_id = 2;
  string token = 3;
}

message AddTeamMemberResponse {
  bool success = 1;
  string message = 2;
}

message GetInvitationStatusRequest {
  int32 invitation_id = 1;
  string token = 2;
}

message Team {
  int32 team_id = 1;
  string team_name = 2;
  int32 number_of_speakers = 3;
}

message GetInvitationStatusResponse {
  string status = 1;
  repeated Team registered_teams = 2;
}