syntax = "proto3";

option go_package = "github.com/iRankHub/backend/internal/grpc/proto/user_management";

package user_management;

service UserManagementService {
  rpc GetPendingUsers(GetPendingUsersRequest) returns (GetPendingUsersResponse) {}
  rpc ApproveUser(ApproveUserRequest) returns (ApproveUserResponse) {}
  rpc RejectUser(RejectUserRequest) returns (RejectUserResponse) {}
  rpc ApproveUsers(ApproveUsersRequest) returns (ApproveUsersResponse) {}
  rpc RejectUsers(RejectUsersRequest) returns (RejectUsersResponse) {}
  rpc DeleteUsers(DeleteUsersRequest) returns (DeleteUsersResponse) {}
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse) {}
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse) {}
  rpc DeleteUserProfile(DeleteUserProfileRequest) returns (DeleteUserProfileResponse) {}
  rpc DeactivateAccount(DeactivateAccountRequest) returns (DeactivateAccountResponse) {}
  rpc ReactivateAccount(ReactivateAccountRequest) returns (ReactivateAccountResponse) {}
  rpc GetAccountStatus(GetAccountStatusRequest) returns (GetAccountStatusResponse) {}
  rpc GetCountries(GetCountriesRequest) returns (GetCountriesResponse) {}
  rpc GetSchools(GetSchoolsRequest) returns (GetSchoolsResponse) {}
  rpc GetStudents(GetStudentsRequest) returns (GetStudentsResponse) {}
  rpc GetVolunteers(GetVolunteersRequest) returns (GetVolunteersResponse) {}
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {}
  rpc GetVolunteersAndAdmins(GetVolunteersAndAdminsRequest) returns (GetVolunteersAndAdminsResponse) {}
  rpc GetSchoolsNoAuth(GetSchoolsNoAuthRequest) returns (GetSchoolsNoAuthResponse) {}
}

message GetPendingUsersRequest {
  string token = 1;
}

message GetPendingUsersResponse {
  repeated UserSummary users = 1;
}

message GetAllUsersRequest {
  string token = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message GetAllUsersResponse {
  repeated UserSummary users = 1;
  int32 totalCount = 2;
}

message UserSummary {
  int32 userID = 1;
  string name = 2;
  string email = 3;
  string userRole = 4;
  string signUpDate = 5;
  string gender = 6;
  string status = 7;
}

message UserProfile {
  int32 userID = 1;
  string name = 2;
  string email = 3;
  string userRole = 4;
  string gender = 5;
  string address = 6;
  string phone = 7;
  string bio = 8;
  bytes profilePicture = 9;
  bool verificationStatus = 10;
  string signUpDate = 11;
  bool twoFactorEnabled = 12;
  bool biometricAuthEnabled = 13;

  oneof role_specific_details {
    StudentDetails studentDetails = 14;
    SchoolDetails schoolDetails = 15;
    VolunteerDetails volunteerDetails = 16;
  }
}

message StudentDetails {
  string grade = 1;
  string dateOfBirth = 2;
  int32 schoolID = 3;
}

message SchoolDetails {
  string schoolName = 1;
  string address = 2;
  string country = 3;
  string province = 4;
  string district = 5;
  string schoolType = 6;
}

message VolunteerDetails {
  string role = 1;
  int32 graduateYear = 2;
  bool safeGuardCertificate = 3;
  bool hasInternship = 4;
  bool isEnrolledInUniversity = 5;
}

message ApproveUserRequest {
  string token = 1;
  int32 userID = 2;
}

message ApproveUserResponse {
  bool success = 1;
  string message = 2;
}

message RejectUserRequest {
  string token = 1;
  int32 userID = 2;
}

message RejectUserResponse {
  bool success = 1;
  string message = 2;
}

message ApproveUsersRequest {
  string token = 1;
  repeated int32 userIDs = 2;
}

message ApproveUsersResponse {
  bool success = 1;
  string message = 2;
  repeated int32 failedUserIDs = 3;
}

message RejectUsersRequest {
  string token = 1;
  repeated int32 userIDs = 2;
}

message RejectUsersResponse {
  bool success = 1;
  string message = 2;
  repeated int32 failedUserIDs = 3;
}

message DeleteUsersRequest {
  string token = 1;
  repeated int32 userIDs = 2;
}

message DeleteUsersResponse {
  bool success = 1;
  string message = 2;
  repeated int32 failedUserIDs = 3;
}

message GetUserProfileRequest {
  string token = 1;
  int32 userID = 2;
}

message GetUserProfileResponse {
  UserProfile profile = 1;
}

message UpdateUserProfileRequest {
  string token = 1;
  int32 userID = 2;
  string name = 3;
  string email = 4;
  string gender = 5;
  string address = 6;
  string phone = 7;
  string bio = 8;
  bytes profilePicture = 9;

  oneof role_specific_details {
    StudentDetails studentDetails = 10;
    SchoolDetails schoolDetails = 11;
    VolunteerDetails volunteerDetails = 12;
  }
}

message UpdateUserProfileResponse {
  bool success = 1;
  string message = 2;
}


message DeleteUserProfileRequest {
  string token = 1;
  int32 userID = 2;
}

message DeleteUserProfileResponse {
  bool success = 1;
  string message = 2;
}

message DeactivateAccountRequest {
  string token = 1;
  int32 userID = 2;
}

message DeactivateAccountResponse {
  bool success = 1;
  string message = 2;
}

message ReactivateAccountRequest {
  string token = 1;
  int32 userID = 2;
}

message ReactivateAccountResponse {
  bool success = 1;
  string message = 2;
}

message GetAccountStatusRequest {
  string token = 1;
  int32 userID = 2;
}

message GetAccountStatusResponse {
  string status = 1;
}

message GetCountriesRequest {
  string token = 1;
}

message GetCountriesResponse {
  repeated Country countries = 1;
}

message Country {
  string name = 1;
  string code = 2;
}

message GetSchoolsRequest {
  string token = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message GetSchoolsResponse {
  repeated School schools = 1;
  int32 totalCount = 2;
}

message School {
  int32 schoolID = 1;
  string name = 2;
  string address = 3;
  string country = 4;
  string province = 5;
  string district = 6;
  string schoolType = 7;
  string contactPersonName = 8;
  string contactEmail = 9;
  string schoolEmail = 10;
}

message GetStudentsRequest {
  string token = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message GetStudentsResponse {
  repeated Student students = 1;
  int32 totalCount = 2;
}

message Student {
  int32 studentID = 1;
  string firstName = 2;
  string lastName = 3;
  string grade = 4;
  string dateOfBirth = 5;
  string email = 6;
  int32 schoolID = 7;
  string schoolName = 8;
}

message GetVolunteersRequest {
  string token = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message GetVolunteersResponse {
  repeated Volunteer volunteers = 1;
  int32 totalCount = 2;
}

message Volunteer {
  int32 volunteerID = 1;
  string firstName = 2;
  string lastName = 3;
  string dateOfBirth = 4;
  string role = 5;
  int32 graduateYear = 6;
  bool safeGuardCertificate = 7;
  string email = 8;
}

message GetVolunteersAndAdminsRequest {
  string token = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message GetVolunteersAndAdminsResponse {
  repeated UserSummary users = 1;
  int32 totalCount = 2;
}

message GetSchoolsNoAuthRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message GetSchoolsNoAuthResponse {
  repeated School schools = 1;
  int32 totalCount = 2;
}